2003-09-06  Alp Toker  <alp@atoker.com>

	* api/gdk-api.xml:
	* sources/Gdk.metadata: out params for Gdk.Window.GetInternalPaintInfo
	* glade/makefile.win32: new win32 makefile
	* glue/win32dll.c:
	* glue/makefile.win32: Patch to remove cygwin1.dll dependency on win32
	from Todd Berman <tberman@gentoo.org>
	* glue/makefile.win32: Update list of sources
	* glue/Makefile.am: Remind people to keep makefile.win32 up to date

2003-09-03 Aleksey Sanin <aleksey@aleksey.com>
 
 	* parser/GAPI/Metadata.pm: enable enums processing using
 	<class/> element syntax
 

2003-09-02  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gda/Makefile.in: Fixed bad nowarn options

2003-08-31  Alp Toker  <alp@atoker.com>

	* api/gdk-api.xml:
	* sources/Gdk.metadata: out params for Gdk.Window.GetOrigin

2003-08-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gdk/Pixbuf.custom: use windows dll name. Removed DllImport that is
	already in the generated file.

	* glib/Thread.cs: use windows dll name.

	* gtk/ThreadNotify.cs: close <remark> comment.

2003-08-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gdk/Pixbuf.custom: Added missing DllImport statement and
	proper copyright header.
	* api/gtk-api.xml:
	* sources/Gtk.metadata: Fixed new_flag rules, they did not
	get applied to the gtk-api.xml.
	* generator/Parameters.cs:
	* generator/StructBase.cs:
	* generator/SymbolTable.cs: Fixed the keyword base was not 
	mangled, also did a little refactoring.

2003-08-28  Alp Toker  <alp@atoker.com>

	* glue/style.c: glue and corresponding .custom entries for
	TextGC

2003-08-26  John Luke  <jluke@cfl.rr.com>

	* gtk/ThreadNotify.cs: mark dllimported methods private

2003-08-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gconf/GConf/Value.cs: implemented support for lists.

	* glib/ListBase.cs: implemented the IDisposable stuff and created a
	new method, FreeList, to free the list when needed.

	* glade/HandlerNotFoundException.cs: make it derive from