@@ -10,4 +10,4 @@ configure
 Makefile
 *.cache
 *.pc
-
+lib
