@@ -8,29 +8,31 @@ namespace GladeSamples {
 	using System;
 	
 	using Gtk;
-	using Gnome;
 	using Glade;
 	using GtkSharp;
-	using System.IO;
-	using System.Reflection;
 
-	public class GladeTest : Program
+	public class GladeTest
 	{
-		[Glade.Widget("main_window")]
+		[Glade.Widget]
 		Gtk.Window main_window;
 
 		public static void Main (string[] args)
 		{
-			new GladeTest (args).Run ();
+			Application.Init ();
+
+			GladeTest gt = new GladeTest ();
+
+			Application.Run ();
 		}
-		public GladeTest (string[] args, params object[] props) 
-			: base ("GladeTest", "0.1", Modules.UI, args, props)
+
+		public GladeTest () 
 		{
 			/* Note that we load the XML info from the assembly instead of using 
 			   an external file. You don't have to distribute the .glade file if 
 			   you don't want */
 			Glade.XML gxml = new Glade.XML (null, "test.glade", "main_window", null);
 			gxml.Autoconnect (this);
+
 			if (main_window != null)
 				Console.WriteLine ("Main Window Title: \"{0}\"", main_window.Title);
 			else
@@ -39,7 +41,7 @@ namespace GladeSamples {
 
 		public void OnWindowDeleteEvent (object o, DeleteEventArgs args) 
 		{
-			Quit ();
+			Application.Quit ();
 			args.RetVal = true;
 		}
 		
