@@ -1,3 +1,14 @@
+2003-09-07  Alp Toker  <alp@atoker.com>
+
+	* makefile.win32: New clean and release targets, and don't bother
+	building the samples (sample/makefile.win32 is out of date anyway)
+	* api/makefile.win32:
+	* glue/makefile.win32:
+	* makefile.win32: Glade# works perfectly on win32 now; include it in
+	the default build
+	* sample/GladeTest.cs:
+	* sample/GladeViewer.cs: Remove Gnome dependency and clean up
+
 2003-09-06  Alp Toker  <alp@atoker.com>
 
 	* api/gdk-api.xml:
